--- a/app/views/angular/index.html
+++ b/app/views/angular/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myapp">
+<html lang="en" ng-app="myapp" state="13" bbb>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -15,11 +15,10 @@
         }
     </style>
 </head>
-<body ng-controller="myController as ss">
+<body ng-controller="myController as ss" >
 <div class="container-fluid">
   <div ui-view></div>
 </div>
-
 </body>
 <script src="../angular/angular.js"></script>
 <script src="../angular-ui-router/release/angular-ui-router.min.js"></script>
