--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -5,6 +5,32 @@
     <title>home</title>
 </head>
 <body>
+<div id="tongnianwang_970_90_a" style="width:970px;height:90px;"><script type="text/javascript" src="http://ads.adinall.com/tongnianwang_970_90_a.js"></script></div>
+
 <h1>欢迎！</h1>
+<div class="bdsharebuttonbox bdshare_popup_list" data-tag="share_1">
+    <a class="bds_qzone" data-cmd="qzone" href="#"></a>
+    <a class="bds_tsina" data-cmd="tsina"></a>
+    <a class="slide-weixin" data-cmd="weixin"></a>
+    <a class="popup_sqq" data-cmd="sqq"></a>
+    <a class="popup_tieba" data-cmd="tieba"></a>
+    <a class="bds_count" data-cmd="count"></a>
+</div>
+<script>
+    window._bd_share_config = {
+        common: {
+            bdText: 'asdasd',
+            bdDesc: 'asdasd',
+            bdUrl:"http://www.tongnian.com/read",
+            bdPic: ''
+        },
+        share: [{
+            "bdSize": 16
+        }]
+
+    }
+    with (document)0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?cdnversion=' + ~(-new Date() / 36e5)];
+
+</script>
 </body>
 </html>
